        Reviewed by Sam Weinig.

https://bugs.webkit.org/show_bug.cgi?id=42939
        WebEditorClient::didBeginEditing is never called in WebKit2

        * page/FocusController.cpp: (WebCore::FocusController::setFocused): Focusing a page without
        a focused frame makes little sense, so WebKit used to focus a frame first when its view
        became first responder. For viewless frames, WebKit cannot know what to focus. The assumption
        here is that in all cases with null m_focusedFrame, it's the main frame that needs to be focused.



Canonical link: https://commits.webkit.org/55453@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64631 268f45cc-cd09-0410-ab3c-d52691b4dbfc